aggiunta nuove api
